index and style edited

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     </head>
     <body>
-        <div class="generalBox">
+        <div class="general-Box">
             <h1>SECRET MESSAGE</h1>
-            <div class="blockA">
+            <div class="block">
                 <div><button id="refresh">refresh</button></div>
                 <div><input id="message"></div>
                 <div><button id="encoder"></button></div>
