--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     </head>
     <body>
-        <div class="general-Box">
+        <div class="general-box">
             <h1>SECRET MESSAGE</h1>
             <div class="block">
                 <div><button id="refresh">refresh</button></div>
@@ -17,9 +17,9 @@
             </div>
             <p id="error" style="color: #d30d1e;"></p>
             <div class="answers">
-                <div id="normText"><p style="opacity: 0.6;">Normalise text...</p></div>
+                <div id="normtext"><p style="opacity: 0.6;">Normalise text...</p></div>
                 <section id="result"><p style="opacity: 0.6;">Encoded message...</p></section>
-                <div id="encodeMsg"><p style="opacity: 0.6;">Encoded rectangle...</p></div>  
+                <div id="encodemsg"><p style="opacity: 0.6;">Encoded rectangle...</p></div>  
             </div>
         </div>
     <script src="./assets/scripts/index.js"></script>
